# cnn-dailymail-summarizer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cnn_dailymail_news_text_summarizer/: __init__.py  config.py  dataset.py  features.py  plots.py  training.py
logs/: events.out.tfevents.1721843385.21cbc8b9e46b.10568.0  events.out.tfevents.1721853951.da147d826e4b.2789.0  events.out.tfevents.1721854376.da147d826e4b.5372.0  events.out.tfevents.1721854770.da147d826e4b.6959.0  events.out.tfevents.1721855038.da147d826e4b.8713.0  events.out.tfevents.1721855317.da147d826e4b.10064.0  events.out.tfevents.1721855574.da147d826e4b.11111.0  events.out.tfevents.1722166828.2b48f7e626f2.293.0  events.out.tfevents.1722167039.2b48f7e626f2.2363.0  events.out.tfevents.1722167295.2b48f7e626f2.2363.1  events.out.tfevents.1722167497.2b48f7e626f2.4391.0  events.out.tfevents.1722168204.2b48f7e626f2.5930.0  events.out.tfevents.1722168502.2b48f7e626f2.5930.1  events.out.tfevents.1722168736.2b48f7e626f2.9573.0  events.out.tfevents.1722169285.2b48f7e626f2.9573.1  events.out.tfevents.1722173836.2b48f7e626f2.9573.2  events.out.tfevents.1722189374.c7dc91211776.539.0  events.out.tfevents.1722189690.c7dc91211776.539.1  events.out.tfevents.1722190821.0ac100328aa8.697.0  events.out.tfevents.1722253540.cef357f60967.397.0  events.out.tfevents.1722254957.cef357f60967.397.1  events.out.tfevents.1722254996.cef357f60967.397.2  events.out.tfevents.1722255010.cef357f60967.397.3  events.out.tfevents.1722255028.cef357f60967.397.4  events.out.tfevents.1722255297.cef357f60967.397.5  (+15 more)
(+4 files in other folders)
